# grad_project

./: ..gitignore.swp  .gitignore  README.md
Project1/deviceImport/: 00000003_CPDMobileBot.xdd
Project1/output/: mnobd.txt
Project3/: Project3.xml
Project3/deviceConfiguration/: openPOWERLINK_MN.xdc
Project3/output/: ProcessImage.cs  mnobd.txt
Project5/deviceImport/: ROS_CNPLC_changed.xdd
Project5/output/: mnobd.cdc  mnobd.txt
catkin_ws/: .gitignore
catkin_ws/devel/: .catkin
catkin_ws/src/tb3_group_pgslam/tb3_description/: CMakeLists.txt  package.xml
catkin_ws/src/tb3_group_pgslam/tb3_description/urdf/: tb3_burger.gazebo.xacro  tb3_burger.urdf.xacro  tb3_burger_for_autorace.gazebo.xacro  tb3_burger_for_autorace.urdf.xacro  tb3_waffle.gazebo.xacro  tb3_waffle.urdf.xacro  tb3_waffle_for_open_manipulator.urdf.xacro  tb3_waffle_pi.gazebo.xacro  tb3_waffle_pi.urdf.xacro  tb3_waffle_pi_for_open_manipulator.urdf.xacro
catkin_ws/src/tb3_group_pgslam/tb3_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
catkin_ws/src/tb3_group_pgslam/tb3_teleop/launch/: tb3_teleop_key.launch
catkin_ws/src/tb3_group_pgslam/tb3_teleop/nodes/: tb3_teleop_key
catkin_ws/src/turtlebot3_slam_toolbox/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/turtlebot3_slam_toolbox/config/: courier_lds_2d.lua  courier_lds_2d_localization.lua  courier_lds_2d_old.lua  frontier_exploration.yaml  frontier_exploration_18.yaml  karto_mapper_params.yaml  toolbox_karto_mapper_params.yaml
catkin_ws/src/turtlebot3_slam_toolbox/launch/: courier_frontier_exploration.launch  courier_frontier_exploration_18.launch  courier_frontier_exploration_orb.launch  courier_localization.launch  courier_sberlab_cartographer.launch  courier_slam.launch  courier_toolbox_karto.launch  courier_toolbox_lifelong.launch  toolbox_merge_maps.launch
catkin_ws/src/turtlebot3_slam_toolbox/src/: flat_world_imu_node2.cpp
ceres/: .gitignore
dev/: cn.map  cn.map.json  cn1.map  in_out.txt  in_out_short.txt  map.pgm.pgm  map.pgm.yaml  restore.txt  scrip.sh  Бойфренд из будущего (расширенная версия) About Time (Extended Cut) [2013, Фантастика, драма, комедия, BDRip] [rutracker-5442195].torrent
dev/rosepl_project_mn/: package.xml
dev/turtlebot3_group/: CMakeLists.txt  package.xml
epl4/deviceConfiguration/: 00000000_POWERLINK_CiA401_CN_1.xdc
epl4/output/: ProcessImage.cs  mnobd.txt  mnobd_char.txt  xap.h  xap.xml
epl_ros/: README.md
epl_ros/demo_mn_console/: CMakeCache.txt
epl_ros/powerlink_test/: CMakeLists.txt  CMakeLists.txt~  multinode10.launch  multinode3.launch  multinode5.launch
epl_ros/powerlink_test/include/catkin/catkin_generated/: safe_execute_install.cmake
epl_ros/powerlink_test/include/catkin/catkin_generated/installspace/: catkin.pc
epl_ros/powerlink_test/include/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py
epl_ros/powerlink_test/include/catkin_generated/installspace/: _setup_util.py
epl_ros/powerlink_test/include/devel/: .rosinstall
epl_ros/powerlink_test/include/devel/lib/pkgconfig/: catkin.pc  genmsg.pc
epl_ros/powerlink_test/include/devel/share/genmsg/cmake/: genmsg-extras.cmake
epl_ros/powerlink_test/include/genmsg/catkin_generated/: genmsg-extras.cmake.develspace.context.cmake.py
epl_ros/powerlink_test/include/powerlink_test/: MemoryAPI.h  MemoryAPI.h.gch  PowerlinkInStruct.h  PowerlinkOutStruct.h  StatusOutStruct.h  TestingOutStruct.h  ros_wrapper.h
epl_ros/powerlink_test/msg/: FallbackIn.msg  PowerlinkIn.msg  PowerlinkOut.msg  StatusOut.msg  TestingOut.msg
epl_ros/powerlink_test/src/: priority_setter.cpp  ros_wrapper.cpp  talker.cpp  talker.cpp.old
epl_ros/raspberry/: CMakeLists.txt  package.xml
epl_ros/raspberry/include/raspberry/: PowerlinkOutStruct.h  ros_wrapper.h
epl_ros/raspberry/msg/: PowerlinkOut.msg
epl_ros/raspberry/src/: memory_api.cpp  priority_setter.cpp  rasp_listener.cpp  rasp_talker.cpp  ros_wrapper.cpp
epl_ros/xap_parser/: cn.map.json
epl_ros_fresh/demo_mn_console/: CMakeLists.txt~
epl_ros_fresh/powerlink_test/: multinode7.launch  package.xml
epl_ros_fresh/xap_parser/: cn_xap.h  parser.py  ros.map.json
gen_xdd/: DemoFactoryPLC.xdd  DemoMotorPLC.xdd  MyBlockPLC.xdd  MyBlockSIM.xdd  ROS_CNPLC.xdd  ROS_CNPLC_changed.xdd  ROS_CNPLC_full.xdd  ROS_CNSIM.xdd  ROS_CNSIM_changed.xdd  TestbenchPLC.xdd  TestbenchSIM.xdd  grad_project.m  hex_generator_sim.m  octave-workspace  test_gen.m
openCONF_project/deviceConfiguration/: openPOWERLINK_CN_1.xdc  openPOWERLINK_MN.xdc
openCONF_project/deviceImport/: openPOWERLINK_CN.xdd
openCONF_project/output/: ProcessImage.cs  mnobd.cdc  mnobd_new2.txt  xap.xml
openCONF_project1/: Project1.xml  Project5.xml
openCONF_project1/deviceConfiguration/: 00000003_CPDMobileBot_1.xdc  openPOWERLINK_MN.xdc
openCONF_project1/deviceImport/: openPOWERLINK_CN.xdd
openCONF_project1/output/: ProcessImage.cs  mnobd.txt  mnobd_new.txt  xap.h  xap.xml
openCONF_project2/: epl4.xml
openCONF_project2/deviceImport/: ROS_CNPLC (2).xdd  (+2 more)
xdd_gen/: DemoFactorySIM.xdd  DemoMotorSIM.xdd  gen_ros_cn.m  iec2epl.m  pdo2str.m  rvs.m  test_aprl_demo.m  xdd_gen_app.m  xdd_generator_sim.m
(+427 files in other folders)
