<?xml version="1.0"?>
<package format="2">
  <name>courier_slam</name>
  <version>1.0.0</version>
  <description>
    The courier_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="Burkov.A.M@sberbank.ru">Alexey Burkov</author>
  <maintainer email="Burkov.A.M@sberbank.ru">Alexey Burkov</maintainer>
  <url type="website">courier</url>
  <url type="emanual">courier</url>
  <url type="repository">courier</url>
  <url type="bugtracker">courier</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>courier_bringup</exec_depend>
  <!--  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>cartographer</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cartographer_ros_msgs</exec_depend>
  <exec_depend>cartographer_rviz</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>slam_karto</exec_depend>
  <exec_depend>frontier_exploration</exec_depend>
  <exec_depend>navigation_stage</exec_depend> -->
</package>
