<?xml version="1.0"?>
<package format="2">
  <name>tb3_description</name>
  <version>1.2.1</version>
  <description>
    3D models of the tb3 for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/tb3_description</url>
  <url type="emanual">http://tb3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/tb3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/tb3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
