<?xml version="1.0"?>
<package format="2">
  <name>tb3_teleop</name>
  <version>1.2.1</version>
  <description>
    Provides teleoperation using keyboard for tb3.
  </description>
  <license>BSD</license>
  <author>Melonee Wise</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/tb3_teleop</url>
  <url type="emanual">http://tb3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/tb3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/tb3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
